cluster/apps/wiki/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wiki
  labels:
    managed-by: flux
