cluster/apps/wiki/wikijs-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs-db
  namespace: wiki
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/instance: wikijs-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: wikijs-db
  name: wikijs-db
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wikijs-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wikijs-db
    spec:
      restartPolicy: Always
      containers:
        - name: wikijs-db
          image: postgres:15.1-bullseye
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: wikijs-db
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: wikijs-db-vol
      volumes:
        - name: wikijs-db-vol
          persistentVolumeClaim:
            claimName: wikijs-db-pvc
