cluster/apps/wiki/wikijs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wiki
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: wikijs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wiki
  labels:
    app.kubernetes.io/instance: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wikijs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wikijs
    spec:
      restartPolicy: Always
      containers:
        - name: wikijs
          image: requarks/wiki:2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: wikijs-data
              mountPath: /wiki/data
      volumes:
        - name: wikijs-data
          persistentVolumeClaim:
            claimName: wikijs-pvc
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wikijs-http
  namespace: wiki
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`wiki.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: redirect-https
          namespace: networking
      services:
        - kind: Service
          name: wikijs
          namespace: wiki
          port: 3000
          scheme: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wikijs-https
  namespace: wiki
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`wiki.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: wikijs
          namespace: wiki
          port: 3000
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
---
